# DIPAL

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  build.bat  build.sh  create_dipal_structure_astro.sh  create_dipal_tests.sh  debug.sh  example.cpp  install.sh  main.cpp  main1.cpp  readme.md  run.sh  run_tests.sh
examples/: CMakeLists.txt
examples/advanced/: processing_pipeline.cpp
examples/basic/: core_examples.cpp  filter_examples.cpp  hello_dipal.cpp  image_io_example.cpp  jpeg_example.cpp  test_filters.cpp  unsharp_mask_example.cpp
include/: CMakeLists.txt  CalendarTime.h  Color.hpp  DIPAL.cpp  DIPAL.hpp  FeatureExtraction.hpp  Filter.cpp  GeometricTransformation.hpp  Image.cpp  Image.hpp  ImageOptimization.hpp  Noise.cpp  Noise.h  Plot.hpp  Sampling.cpp  Segmentation.cpp  Segmentation.hpp  readme.md
include/Actions/: Actions.cpp  CMakeLists.txt
include/Calendar/: CalendarDate.cpp  CalendarTime.cpp
include/Classification/: CMakeLists.txt  Classification.cpp  Classification.hpp
include/Classifier/: Classifier.cpp  Classifier.hpp
include/Color/: CIELAB.hpp  CMY.hpp  CMakeLists.txt  Color.hpp  HLS.cpp  HLS.hpp  HMMD.hpp  HSI.hpp  HSV.cpp  HSV.hpp  RGB.hpp  SRGB.hpp  YCBCR.hpp  YIQ.cpp  YIQ.hpp
include/Compression/: BMP.hpp  CMakeLists.txt  GIF.cpp  GIF.hpp  JPEG.hpp  PNG.cpp  PNG.hpp  RAW.cpp  RAW.hpp  SVG.cpp  SVG.hpp  TIFF.hpp
include/DIPAL/: CMakeLists.txt  DIPAL.hpp  ImgProc.hpp
include/DIPAL/Color/: ColorConversions.hpp  ColorSpace.hpp  ColorTransform.hpp
include/DIPAL/Core/: Concepts.hpp  Core.hpp  Error.hpp  Iterators.hpp  Result.hpp  Types.hpp
include/DIPAL/Filters/: FilterStrategy.hpp  Filters.hpp  GaussianBlurFilter.hpp  MedianFilter.hpp  SobelFilter.hpp  SoberFilter.hpp  UnsharpMaskFilter.hpp
include/DIPAL/IO/: BMPImage.hpp  BMPImageIO.hpp  ImageIO.hpp  JPEGImageIO.hpp  PNGImageIO.hpp  PPMImageIO.hpp
include/DIPAL/Image/: BinaryImage.hpp  ColorImage.hpp  GrayscaleImage.hpp  Image.hpp  ImageFactory.hpp  ImageView.hpp  PixelIterator.hpp
include/DIPAL/ImageProcessor/: FilterCommand.hpp  ImageProcessor.hpp  ParallelProcessor.hpp  ProcessingCommand.hpp
include/DIPAL/Observer/: ProcessObserver.hpp  ProcessingObserver.hpp  ProgressObserver.hpp
include/DIPAL/Transformation/: AffineTransform.hpp  Interpolation.hpp  (+5 more)
include/Format/: Format.hpp
include/Image/: BinaryImage.hpp  CMakeFiles.txt  CMakeLists.txt  ColorImage.cpp  ColorImage.h  ColorImage.hpp  Grayscale.cpp  Grayscale.hpp  GrayscaleImage.hpp  Header.h  Header.hpp  Image.cpp  Image.hpp  ImageFactory.h  ImageFactory.hpp  ImageTypes.h
include/Math/: CMakeLists.txt  LinearAlgebra.hpp  Math.cpp  Math.hpp  Vectors.hpp
include/Plot/: Plot.hpp
include/Quantization/: Quantization.hpp
include/Transformation/: CMakeLists.txt  Transformation.cpp  Transformation.hpp
src/: CMakeLists.txt  main.cpp
src/Actions/: Actions.cpp
src/Calendar/: CalendarDate.cpp  CalendarTime.cpp
src/Classification/: CMakeLists.txt
src/Color/: CIELAB.cpp  CIELAB.hpp  CMakeLists.txt  Color.cpp  ColorConversions.cpp  HLS.hpp  HMMD.cpp  RGB.cpp  YCBCR.cpp  YIQ.hpp
src/Compression/: BMP.cpp  BMP.hpp  CMakeLists.txt  Compression.cpp  Compression.hpp  GIF.hpp  JPEG.cpp  TIFF.cpp
src/Core/: Concepts.cpp  Core.cpp  Error.cpp
src/DIPAL/: CMakeLists.txt  DIPAL.cpp  DIPAL.hpp
src/Features/: FeatureExtraction.cpp
src/Filter/: Filter.cpp  Filter.hpp
src/Filters/: GaussianBlurFilter.cpp  MedianFilter.cpp  SobelFilter.cpp  UnsharpMaskFilter.cpp
src/Format/: Format.cpp
src/IO/: BMPImageIO.cpp  ImageIO.cpp  JPEGImageIO.cpp  PPMImageIO.cpp
src/Image/: BinaryImage.cpp  CMakeLists.txt  ColorImage.cpp  GrayscaleImage.cpp  GrayscaleImage.hpp  Header.cpp  Image.cpp  ImageCreator.cpp  ImageFactory.cpp
src/ImageProcessor/: FilterCommand.cpp  ImageProcessor.cpp  ParallelProcessor.cpp  ProcessingCommand.cpp
src/Math/: LinearAlgebra.cpp
src/Noise/: Noise.cpp
src/Observer/: ProcessingObserver.cpp
src/Plot/: Plot.cpp
src/Quantization/: Quantization.cpp
src/Segmentation/: Segmentation.hpp
src/Transformation/: AffineTransform.cpp  CMakeLists.txt  GeometricTransform.cpp  Interpolation.cpp  ResizeTransform.cpp  RotateTransform.cpp  Transformation.cpp  WarpTransform.cpp
src/Utils/: Concurrency.cpp  Logger.cpp  MemoryUtils.cpp  Profiler.cpp
tests/: CMakeLists.txt  README.md
tests/compatibility/: compiler_compatibility_tests.cpp  cpp23_features_tests.cpp  platform_compatibility_tests.cpp
tests/fixtures/: README.md
tests/integration/: error_propagation_tests.cpp  file_processing_tests.cpp  filter_pipeline_integration_tests.cpp  image_conversion_tests.cpp  processor_observer_integration_tests.cpp  recovery_tests.cpp
tests/performance/: batch_processing_tests.cpp  filter_performance_tests.cpp  large_image_tests.cpp  performance_regression_tests.cpp
tests/stress/: boundary_condition_tests.cpp  concurrent_stress_tests.cpp  corrupted_data_tests.cpp  extreme_image_sizes_tests.cpp  memory_stress_tests.cpp
tests/unit/: binary_image_tests.cpp  bmp_io_tests.cpp  color_conversions_tests.cpp  color_image_tests.cpp  color_space_tests.cpp  concepts_tests.cpp  concurrency_tests.cpp  core_tests.cpp  error_tests.cpp  filter_command_tests.cpp  filter_pipeline_tests.cpp  filter_strategy_tests.cpp  gaussian_blur_filter_tests.cpp  geometric_transform_tests.cpp  grayscale_image_tests.cpp  image_factory_tests.cpp  image_io_tests.cpp  image_processor_tests.cpp  image_tests.cpp  image_view_tests.cpp  interpolation_tests.cpp  logger_tests.cpp  median_filter_tests.cpp  memory_utils_tests.cpp  parallel_processor_tests.cpp  pixel_iterator_tests.cpp  ppm_io_tests.cpp  processing_observer_tests.cpp  profiler_tests.cpp  resize_transform_tests.cpp  result_tests.cpp  sobel_filter_tests.cpp  unsharp_mask_filter_tests.cpp
tests/utils/: image_test_utils.cpp  image_test_utils.hpp  mock_observers.cpp  mock_observers.hpp  test_image_generator.cpp  test_image_generator.hpp  test_utils.cpp  test_utils.hpp
(+222 files in other folders)
