add_subdirectory(Classification)
add_subdirectory(Color)
add_subdirectory(Compression)
add_subdirectory(Features)
add_subdirectory(Filter)
add_subdirectory(Format)
add_subdirectory(Image)
add_subdirectory(Math)
add_subdirectory(Noise)
add_subdirectory(Optimization)
add_subdirectory(Quantization)
add_subdirectory(Sampling)
add_subdirectory(Segmentation)
add_subdirectory(Transformation)

add_library(DIPAL DIPAL.cpp DIPAL.hpp)